# fde-platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: add-use-case.md  agent-runs.md  propguru-eval.md  propguru-reset.md  propguru-status.md
.claude/hooks/: post-edit-lint.sh  stop-restart.sh
agents/configs/: agri_assistant.yaml  fundly_email_marketer.yaml  order-analyst.yaml  order-dispatch-auto.yaml  order-dispatch-review.yaml  outreach-analyst.yaml  pharma-ops-supervisor.yaml  pharma-outreach.yaml  pharma_outreach.yaml  propguru-data-collector.yaml  propguru-evaluation-refiner.yaml  propguru-evaluation-supervisor.yaml  propguru-evaluator.yaml  propguru-market-analyst.yaml  propguru-scorer.yaml  propguru-vastu-scorer.yaml  react_agent.yaml  sandhar-attendance-analyst.yaml  sandhar-constraint-validator.yaml  sandhar-plan-generator.yaml  sandhar-plan-refiner.yaml  sandhar-planning-supervisor.yaml  sandhar-resource-allocator.yaml  sandhar-wo-prioritisation.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_langsmith_run_id.py  003_add_cost_and_trace_url.py  004_add_otel_trace_id.py  005_add_otel_trace_url.py  006_add_orders_and_settings.py  007_add_agent_actions.py  (+14 more)
docs/: agent-yaml-reference.md  dispatch-agent-design.md  elementary-platform-brief.md  generic-hitl-design.md  langflow-integration-options.md  langgraph-recursion-limit.md  launch-new-agent.md  mcp-tool-management.md  plan-refine-feature.md  propguru-mysql-schema-research.md  propguru-prd.md  propguru-pre-evaluate-refactor.md  propguru-system-design.md  propguru-verification-loop.md  sandhar-production-planning-prd.md  sandhar-simulation-guide.md  sandhar-system-design.md  stores-memory-architecture.md  system-design.md
scripts/: ci_deploy.sh  init_postgres.sh  init_postgres.sql  launch_agent.py  seed_data.py  seed_orders.py  seed_vastu_store.sh  start_api.sh  start_worker.sh  sync_langflow_flows.py  wait_for_db.py
tests/: test_propguru_model_grader.py  test_propguru_verifier.py
(+138 files in other folders)
