[project]
name = "fde-agent"
version = "0.1.0"
description = "Fundly AI Agent Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangGraph / LangChain
    "langgraph>=0.2.45",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.3.7",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.14",
    "langchain-community>=0.3.7",
    "langsmith>=0.1.147",
    # API
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "python-multipart>=0.0.19",
    "python-jose[cryptography]>=3.3.0",
    # Data / validation
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "pyyaml>=6.0.2",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    # Queue
    "celery[redis]>=5.4.0",
    "redis>=5.2.1",
    # Search (optional — graceful fallback if key absent)
    "tavily-python>=0.5.0",
    # HTTP client
    "httpx>=0.27.2",
    # OpenTelemetry — tracing SDK + OTLP HTTP exporter + auto-instrumentation
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-celery>=0.48b0",
    "jinja2>=3.1.0",
]

[project.scripts]
fde-agent = "fde_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fde_agent"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.27.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
